third_party/move/move-compiler-v2/tests/more-v1/expansion/duplicate_field.exp

Diagnostics:
error: duplicate declaration, item, or annotation
  ┌─ tests/more-v1/expansion/duplicate_field.move:4:9
  │
3 │         f: u64,
  │         - Field previously defined here
4 │         f: u64,
  │         ^ Duplicate definition for field 'f'
